--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "git-commit-msg-linter": "^3.2.6",
     "jest": "^27.0.4",
     "ts-jest": "^27.0.3",
+    "ts-node": "^10.0.0",
     "typescript": "^4.3.4"
   }
 }
