--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "diogojorge1401 <diogojorge1401@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.12.4",
     "@types/validator": "^13.1.4",
@@ -30,6 +31,7 @@
     "typescript": "^4.3.4"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "validator": "^13.6.0"
   }
 }
