--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start":"sucrase-node src/main/server.ts",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
@@ -16,6 +17,7 @@
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.2.5",
     "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.12",
     "@types/jest": "^26.0.23",
     "@types/mongodb": "^3.6.18",
     "@types/node": "^15.12.4",
@@ -28,12 +30,14 @@
     "eslint-plugin-promise": "^4.3.1",
     "git-commit-msg-linter": "^3.2.6",
     "jest": "^27.0.4",
+    "sucrase": "^3.19.0",
     "ts-jest": "^27.0.3",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.4"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "express": "^4.17.1",
     "mongodb": "^3.6.9",
     "validator": "^13.6.0"
   }
